Fixed spacing issues on mobile view

--- a/src/app.css
+++ b/src/app.css
@@ -16,7 +16,6 @@ body {
   background-repeat: repeat;
   padding: 20px 0;
   font-family: 'Karla', sans-serif;
-  font-weight: 400; 
   font-size: 16px;
   color: #515168;
   font-weight: 700;
@@ -26,13 +25,19 @@ main {
   background-color: rgba(253, 253, 250, 0.96);
   border: 15px solid transparent;
   border-radius: 1rem;
-  height: 400px;
-  width:95%;
+  width: 100%;
   max-width: 860px;
-  height: 570px;
+  height: 85vh;
+  /* height: 570px; */
   margin: auto;
   overflow: auto;
+  overflow-x: hidden;
 }
 
+@media only screen and (min-width: 500px) {
+  main {
+    width: 95%;
+  }
+}
 
 
