--- a/src/intro-components/form.css
+++ b/src/intro-components/form.css
@@ -62,7 +62,7 @@ textarea {
 
 /* Customize the the container) */
 .checkbox-div {
-  padding-top: 20px;
+  padding-top: 5px;
   display: flex;
 }
 
@@ -148,6 +148,10 @@ textarea {
     flex-direction: row;
     justify-content: space-between;
     gap: 0;
+  }
+
+  .checkbox-div {
+    padding-top: 20px;
   }
  
 }
