--- a/src/quiz-components/card.css
+++ b/src/quiz-components/card.css
@@ -20,8 +20,9 @@
   justify-content: center;
   flex-wrap: wrap;
   gap: 15px;
-  padding: 10px 0 30px;
+  padding: 10px 23px 30px 0px;
   width: 100%;
+  overflow-x: hidden;
 }
 
 .answer-button {
@@ -74,5 +75,10 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;  
+  }
+
+  .answer-container {  
+    padding: 10px 0px 30px 0px;
+    
   }
 }
